# driver-template

./: CMakeLists.txt  Kconfig  README.driver.md  README.md  setup.py
drivers/__SUBSYS__/__DRIVER_SLUG__/: CMakeLists.txt  Kconfig  __DRIVER_SLUG__.c  __DRIVER_SLUG__.h  __DRIVER_SLUG___api.h  __DRIVER_SLUG___device.c  __DRIVER_SLUG___hardware.c  __DRIVER_SLUG___library_mock.c  __DRIVER_SLUG___public_mock.c  __DRIVER_SLUG___simulation.c
drivers/__SUBSYS__/__DRIVER_SLUG__/boilerplate/: __DRIVER_SLUG___library_mock.c
drivers/__SUBSYS__/__DRIVER_SLUG__/bus_variants/i2c/: Kconfig  binding.yaml  hardware.c  wrapper.c  wrapper.h
drivers/__SUBSYS__/__DRIVER_SLUG__/bus_variants/spi/: Kconfig  (+4 more)
dts/bindings/__SUBSYS__/: __VENDOR__,__DRIVER_SLUG__.yaml
lib/__DRIVER_SLUG__/: __DRIVER_SLUG___lib.c  __DRIVER_SLUG___lib.h
template/common/: README.driver.md
template/common/tests/integration/: CMakeLists.txt  prj.conf  testcase.yaml
template/common/tests/unit/: CMakeLists.txt  prj.conf  testcase.yaml
template/hardware/tests/integration/: prj.conf
template/hardware/tests/sitl/: CMakeLists.txt  prj.conf  testcase.yaml
template/mock/: CMakeLists.txt  Kconfig
template/mock/tests/integration/: app.overlay
tests/library_mock/: CMakeLists.txt  prj.conf  testcase.yaml
tests/library_mock/src/: main.c
tests/public_mock/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
tests/public_mock/src/: main.c
tests/simulation/: CMakeLists.txt  prj.conf  testcase.yaml
tests/simulation/src/: main.c
tests/unit/: CMakeLists.txt  testcase.yaml
tests/unit/src/: main.c
(+20 files in other folders)
